working as needed

--- a/framefakemap/fake map play.html
+++ b/framefakemap/fake map play.html
@@ -16,13 +16,15 @@
 }
 .map::-webkit-scrollbar {
     display: none; /*Hide scroll bars for chrome*/
+    
 }
 </style>
-   
-</head>
+ 
+</head> 
+
 <body>
     <div class="map">
-        <img id="image" src="mapimage.jpg" alt="Interactive Map" draggable="false" style="height: 100%; width: 100%; scale: 2.75;">
+        <img id="image" src="https://i.ibb.co/9n2D5Jb/mapimage.jpg" alt="Interactive Map" draggable="false" style="height: 100%; width: 100%; scale: 2.75;">
     </div>
 </body>
 </html>
