another map image added

--- a/framefakemap/fake map.html
+++ b/framefakemap/fake map.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="map">
-        <img id="image" src="mapimage.jpg" alt="Interactive Map" draggable="false" style="height: 100%; width: 100%; scale: 2.75;">
+        <img id="image" src="mapimage.png" alt="Interactive Map" draggable="false" style="height: 100%; width: 100%; scale: 2.75;">
     </div>
 </body>
 </html>
