bug with fake maps r

--- a/framefakemap/fake map.html
+++ b/framefakemap/fake map.html
@@ -7,8 +7,8 @@
   <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
   <style>
     .map {
-      width: 75%;
-      height: 75%;
+      width: 50%;
+      height: 50%;
       overflow-y: scroll;
       overflow-wrap: scroll;
       scrollbar-width: none;
@@ -26,9 +26,9 @@
 
 </head>
 
-<body>
+<body><h1>fake map using local media</h1>
   <div class="map">
-    <img id="image" src="mapimage.png" alt="Interactive Map" draggable="false"
+    <img id="image" src="mapimage.jpg" alt="Interactive Map" draggable="false"
       style="height: 100%; width: 100%; scale: 2.75;">
   </div>
 </body>
