--- a/framefakemap/fake map play.html
+++ b/framefakemap/fake map play.html
@@ -7,8 +7,8 @@
     <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
     <style>
         .map {
-            width: 75%;
-            height: 75%;
+            width: 50%;
+            height: 50%;
             overflow-y: scroll;
             overflow-wrap: scroll;
             scrollbar-width: none;
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body><h1>Fake may using web media</h1>
     <div class="map">
         <img id="image" src="https://i.ibb.co/9n2D5Jb/mapimage.jpg" alt="Interactive Map" draggable="false"
             style="height: 100%; width: 100%; scale: 2.75;">
