--- a/framefakemap/real map.html
+++ b/framefakemap/real map.html
@@ -46,7 +46,7 @@
         var marker9 = L.marker([27.461832876757647, 77.67211120410315]).addTo(map);
         marker1.bindTooltip("🙁 not clean").openPopup();
         marker2.bindTooltip("😍 clean and green").openPopup();
-        marker3.bindTooltip("😊 neat and clean").openTooltip();
+        marker3.bindTooltip("😊 neat and clean").openPopup();
         marker4.bindTooltip("😍 clean and green").openPopup();
         marker5.bindTooltip("😓 not so clean").openPopup();
         marker6.bindTooltip("😍 clean and awesome").openPopup();
