--- a/comp form/index.html
+++ b/comp form/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <title>Contact Form 03</title>
+
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +20,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
-                    <h2 class="heading-section">Contact Form #03</h2>
+                    <h2 class="heading-section">Complain ID: GHI-78901234</h2>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -27,11 +30,22 @@
                             <div class="col-md-3">
                                 <div class="dbox w-100 text-center">
                                     <div class="icon d-flex align-items-center justify-content-center">
+                                        <span class="fa fa-user"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p><span>Sharad Chauhan</span><br> Male, 19 </p>
+                                    </div> <a href="#">Update User Details!</a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="dbox w-100 text-center">
+                                    <div class="icon d-flex align-items-center justify-content-center">
                                         <span class="fa fa-map-marker"></span>
                                     </div>
                                     <div class="text">
-                                        <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-                                    </div>
+                                        <p><span>Location:</span>Lane 3, Prabhat Nagar, Mathura, Uttar Pradesh 281001
+                                        </p>
+                                    </div><a href="#">Update location!</a>
                                 </div>
                             </div>
                             <div class="col-md-3">
@@ -40,76 +54,67 @@
                                         <span class="fa fa-phone"></span>
                                     </div>
                                     <div class="text">
-                                        <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-                                    </div>
+                                        <p><span>Contact Number:</span> <br> +91 123 123 1234</p>
+                                    </div> <a href="#">Update Contact Number!</a>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="dbox w-100 text-center">
                                     <div class="icon d-flex align-items-center justify-content-center">
-                                        <span class="fa fa-paper-plane"></span>
+                                        <span class="fa fa-id-card-o"></span>
                                     </div>
                                     <div class="text">
-                                        <p><span>Email:</span> <a
-                                                href="/cdn-cgi/l/email-protection#eb82858d84ab92849e9998829f8ec5888486"><span
-                                                    class="__cf_email__"
-                                                    data-cfemail="e980878f86a990869c9b9a809d8cc78a8684">[email&#160;protected]</span></a>
-                                        </p>
-                                    </div>
+                                        <p><span>Adhaar Number:</span> <br> 1234 1234 1234 1234</p>
+                                    </div> <a href="#">Log Out!</a>
                                 </div>
                             </div>
-                            <div class="col-md-3">
-                                <div class="dbox w-100 text-center">
-                                    <div class="icon d-flex align-items-center justify-content-center">
-                                        <span class="fa fa-globe"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p><span>Website</span> <a href="#">yoursite.com</a></p>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
                         <div class="row no-gutters">
                             <div class="col-md-7">
-                                <div class="contact-wrap w-100 p-md-5 p-4">
-                                    <h3 class="mb-4">Contact Us</h3>
-                                    <div id="form-message-warning" class="mb-4"></div>
-                                    <div id="form-message-success" class="mb-4">
-                                        Your message was sent, thank you!
-                                    </div>
+                                <div class="contact-wrap w-100 p-md-5 p-4" style="border-style: double;">
+                                    <h3 class="mb-4">Enter Details</h3>
+
                                     <form method="POST" id="contactForm" name="contactForm" class="contactForm">
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <label class="label" for="name">Full Name</label>
-                                                    <input type="text" class="form-control" name="name" id="name"
-                                                        placeholder="Name">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label class="label" for="email">Email Address</label>
-                                                    <input type="email" class="form-control" name="email" id="email"
-                                                        placeholder="Email">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-12">
-                                                <div class="form-group">
-                                                    <label class="label" for="subject">Subject</label>
-                                                    <input type="text" class="form-control" name="subject" id="subject"
-                                                        placeholder="Subject">
+                                                    <label class="label" for="name">Select Waste Type:*</label>
+                                                    <select>
+                                                        <option value=" ">Select the issue </option>
+                                                        <option value="Plastic waste">Plastic waste</option>
+                                                        <option value="Sewage Problem">Sewage Problem</option>
+                                                        <option value="Garbage">Garbage</option>
+
+                                                        <option value="Other">Other</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
                                                 <div class="form-group">
-                                                    <label class="label" for="#">Message</label>
-                                                    <textarea name="message" class="form-control" id="message" cols="30"
-                                                        rows="4" placeholder="Message"></textarea>
+                                                    <label class="label" for="#">Additional Details</label>
+                                                    <br> <textarea name="comment"
+                                                        placeholder="Enter short summary of issue (max 200 characters)."
+                                                        maxlength="200"></textarea>
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
                                                 <div class="form-group">
-                                                    <input type="submit" value="Send Message" class="btn btn-primary">
+                                                    <label class="label" for="#">Upload Picture</label>
+                                                    <input type='file' onchange="readURL(this);"
+                                                        accept="image/*;capture=camera" />
+                                                    <img id="issue_img" />
+                                                </div>
+                                            </div>
+                                            <div class="col-md-12">
+                                                <div class="form-group">
+                                                    <input type="checkbox" name="terms" value="check" id="terms" />I
+                                                    have read and agree
+                                                    to the
+                                                    <a href="#" target="">Terms and Conditions</a>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="submit" value="Submit" class="btn btn-primary">
                                                     <div class="submitting"></div>
                                                 </div>
                                             </div>
@@ -118,7 +123,9 @@
                                 </div>
                             </div>
                             <div class="col-md-5 d-flex align-items-stretch">
-                                <div class="info-wrap w-100 p-5 img" style="background-image: url(images/img.jpg);">
+                                <div class="container">
+                                    <div id="map">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -129,11 +136,7 @@
     </section>
    
     <script src="js/main.js"></script>
-    <script defer
-        src="https://static.cloudflareinsights.com/beacon.min.js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854"
-        integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg=="
-        data-cf-beacon='{"rayId":"802dbd765dd0f3ad","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2023.8.0","si":100}'
-        crossorigin="anonymous"></script>
+   
 </body>
 
 </html>
